force-app/main/default/objects/Emoji__c/Emoji__c.object-meta.xml
<CustomObject>
    <label>Emoji</label>
    <nameField>
        <label>Emoji Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Emojis</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>