force-app/main/default/objects/Emoji__c/fields/Char__c.field-meta.xml
<CustomField>
    <fullName>Char__c</fullName>
    <formula>Character__r.Name</formula>
    <label>Char</label>
    <type>Text</type>
</CustomField>