force-app/main/default/objects/Emoji__c/fields/Character__c.field-meta.xml
<CustomField>
    <fullName>Character__c</fullName>
    <label>Character</label>
    <referenceTo>Character__c</referenceTo>
    <relationshipLabel>Emojis</relationshipLabel>
    <relationshipName>Emojis</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>