force-app/main/default/objects/Emoji__c/fields/Ext_Id__c.field-meta.xml
<CustomField>
    <fullName>Ext_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>